--- a/index-redux/examples.html
+++ b/index-redux/examples.html
@@ -29,6 +29,8 @@
                 <nav>
                     <ul>
                         <li><a href="https://github.com/phosphorjs/">GitHub</a></li>
+                        <li><a href="quickstart.html">Quickstart</a></li> 
+                        <li><a href="tutorials.html">Tutorials</a></li>
                         <li><a href="examples.html">Examples</a></li>
                         <li><a href="docs.html">Docs</a></li>
                         <li><a href="about.html">About</a></li>
