--- a/index-redux/tutorials.html
+++ b/index-redux/tutorials.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-        <title>PhosphorJS</title>
+        <title>PhosphorJS: Examples</title>
         <meta name="description" content="PhosphorJS">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="apple-touch-icon" href="apple-touch-icon.png">
@@ -42,19 +42,28 @@
         <div class="main-container">
             <div class="main wrapper clearfix">
                 <article>
-                    <h2>Robust</h2>
-                    <p>PhosphorJS provides a rich set of widgets, layouts, events, and data structures. These enable developers to construct advanced, production-quality, desktop-like web applications that would be otherwise impossible using CSS alone. 
-                    <h2>Modular</h2>
-                    <p>PhosphorJS libraries cover a range of topics including message passing, signaling, attached properties, data structures, widgets, and layouts. </p>
-                    <p>Each is separately installable via NPM, allowing developers to use them individually, according to their needs.</p>
-                    <h2>Performant</h2>
-                    <h3>Speed matters.</h3>
-                    <p>To maintain a 60fps refresh rate in response to user interaction, an application has ~16ms to perform all logic calculations, DOM manipulations, reflows, and repaints. Meeting this threshold is challenging for sizable, multi-tab, single-page, applications.</p>
-                    <p>PhosphorJS widgets and layouts are written with efficiency in mind, minimizing reflows whenever possible and consistently achieving sub-millisecond layout times. </p>
-                    <p>This leaves as much of the time-slice as possible to be used for the execution of business logic.</p>
-                    <h2>Extensible</h2>
-                    <p>PhosphorJS plays well with existing web frameworks and libraries. It is not an opinionated and rigid toolset that constrains the developer to a specific model or data flow.</p>
-                    <p>Rather, it allows the developer to build high-performance user interfaces with well-structured widget hierarchies in a flexible manner.</p>
+                    <heading>
+                        <h1>Tutorials</h1>
+                    </heading>
+                    <section>
+                      <h2>PhosphorJS Dada Structures</h2>
+                        <p>In Progress</p>
+                    </section>
+
+                    <section>
+                      <h2>PhosphorJS Core Patterns</h2>
+                        <p>In Progress</p>
+                    </section>
+                    
+                    <section>
+                      <h2>PhosphorJS UI</h2>
+                        <p>In Progress</p>
+                    </section>
+
+                    <section>
+                        <h2>PhosphorJS + React</h2>
+                        <p>In Progress</p>
+                    </section>
                 </article>
 
                 <aside>
