added phosphorui tutorial

--- a/index-redux/tutorials.html
+++ b/index-redux/tutorials.html
@@ -46,7 +46,7 @@
                         <h1>Tutorials</h1>
                     </heading>
                     <section>
-                      <h2>PhosphorJS Dada Structures</h2>
+                      <h2>PhosphorJS Data Structures</h2>
                         <p>In Progress</p>
                     </section>
 
