--- a/index-redux/tutorials.html
+++ b/index-redux/tutorials.html
@@ -1,90 +1,78 @@
 <!doctype html>
 <html class="no-js" lang="">
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-        <title>PhosphorJS: Tutorials</title>
-        <meta name="description" content="PhosphorJS">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="apple-touch-icon" href="apple-touch-icon.png">
-        <link rel="icon" href="favicon.ico">
-        <link href='https://fonts.googleapis.com/css?family=Lato:400italic,300,300italic' rel='stylesheet' type='text/css'>
-        <link href='https://fonts.googleapis.com/css?family=Nunito:300' rel='stylesheet' type='text/css'>
-        <link rel="stylesheet" href="css/normalize.min.css">
-        <link rel="stylesheet" href="css/main.css">
+<head>
+<meta charset="utf-8">
+<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+<title>PhosphorJS: Tutorials</title>
+<meta name="description" content="PhosphorJS">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="apple-touch-icon" href="apple-touch-icon.png">
+<link rel="icon" href="favicon.ico">
+<link href='https://fonts.googleapis.com/css?family=Lato:400italic,300,300italic' rel='stylesheet' type='text/css'>
+<link href='https://fonts.googleapis.com/css?family=Nunito:300' rel='stylesheet' type='text/css'>
+<link rel="stylesheet" href="css/normalize.min.css">
+<link rel="stylesheet" href="css/main.css">
 
-        <!--[if lt IE 9]>
+<!--[if lt IE 9]>
             <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
             <script>window.html5 || document.write('<script src="js/vendor/html5shiv.js"><\/script>')</script>
         <![endif]-->
-    </head>
-    <body>
+</head>
+<body>
 
-        <div class="header-container">
-            <header class="wrapper clearfix">
-                <a href="index.html">
-                    <div class="logo"></div>
-                    <h1 class="title">PhosphorJS</h1>
-                </a>
-                <nav>
-                    <ul>
-                        <li><a href="https://github.com/phosphorjs/">GitHub</a></li>
-                        <li><a href="quickstart.html">Quickstart</a></li> 
-                        <li><a href="tutorials.html">Tutorials</a></li>
-                        <li><a href="examples.html">Examples</a></li>
-                        <li><a href="docs.html">Docs</a></li>
-                        <li><a href="about.html">About</a></li>
-                    </ul>
-                </nav>
-            </header>
-        </div>
+<div class="header-container">
+  <header class="wrapper clearfix">
+    <a href="index.html">
+      <div class="logo"></div>
+      <h1 class="title">PhosphorJS</h1>
+    </a>
+    <nav>
+      <ul>
+        <li><a href="https://github.com/phosphorjs/">GitHub</a></li>
+        <li><a href="quickstart.html">Quickstart</a></li> 
+        <li><a href="tutorials.html">Tutorials</a></li>
+        <li><a href="examples.html">Examples</a></li>
+        <li><a href="docs.html">Docs</a></li>
+        <li><a href="about.html">About</a></li>
+      </ul>
+    </nav>
+  </header>
+</div>
 
-        <div class="main-container">
-            <div class="main wrapper clearfix">
-                <article>
-                    <heading>
-                        <h1>Tutorials</h1>
-                    </heading>
-                    <section>
-                      <h2>PhosphorJS Data Structures</h2>
-                        <p>In Progress</p>
-                    </section>
+<div class="main-container">
+  <div class="main wrapper clearfix">
+    <article>
+      <heading>
+      <h1>Tutorials</h1>
+      </heading>
+      <section>
+        <ul>
+          <li><h3>PhosphorJS Data Structures</h3>
+          <li><h3>PhosphorJS Core Patterns</h3> <li><a
+            href="phosphorui.html"><h3>PhosphorJS UI</h3></a>
+          <li><h3>PhosphorJS + React</h3>
+        </section>
+      </article>
 
-                    <section>
-                      <h2>PhosphorJS Core Patterns</h2>
-                        <p>In Progress</p>
-                    </section>
-                    
-                    <section>
-                      <h2>PhosphorJS UI</h2>
-                        <p>In Progress</p>
-                    </section>
+      <aside>
+        <div class="logo"></div>
+        <h2>PhosphorJS</h2>
+        <p>a collection of libraries <br>
+        designed  to make it easy<br>
+        to build high-performance,<br>
+        pluggable, desktop-style <br>
+        web applications</p>
+      </aside>
 
-                    <section>
-                        <h2>PhosphorJS + React</h2>
-                        <p>In Progress</p>
-                    </section>
-                </article>
+    </div> <!-- #main -->
+  </div> <!-- #main-container -->
 
-                <aside>
-                    <div class="logo"></div>
-                    <h2>PhosphorJS</h2>
-                    <p>a collection of libraries <br>
-                    designed  to make it easy<br>
-                    to build high-performance,<br>
-                    pluggable, desktop-style <br>
-                    web applications</p>
-                </aside>
-
-            </div> <!-- #main -->
-        </div> <!-- #main-container -->
-
-        <!-- <div class="footer-container">
+  <!-- <div class="footer-container">
             <footer class="wrapper">
                 <h3>footer</h3>
             </footer>
         </div> -->
 
-        <script src="js/main.js"></script>
-    </body>
-</html>
+  <script src="js/main.js"></script>
+  </body>
+  </html>
