--- a/index-redux/docs.html
+++ b/index-redux/docs.html
@@ -29,6 +29,8 @@
                 <nav>
                     <ul>
                         <li><a href="https://github.com/phosphorjs/">GitHub</a></li>
+                        <li><a href="quickstart.html">Quickstart</a></li> 
+                        <li><a href="tutorials.html">Tutorials</a></li>
                         <li><a href="examples.html">Examples</a></li>
                         <li><a href="docs.html">Docs</a></li>
                         <li><a href="about.html">About</a></li>
@@ -40,80 +42,59 @@
         <div class="main-container">
             <div class="main wrapper clearfix">
                 <article>
-                    <h2>Collections</h2>
+                    <h2>Phosphor Core</h2>
                     <ul class="nobull">
                         <li>
-                            <a href="http://phosphorjs.github.io/phosphor-arrays/api">Arrays</a>
+                            <a href="arrays.html">Arrays</a>
                         </li>
                         <li>
-                            <a href="http://phosphorjs.github.io/phosphor-observablelist/api">ObservableList</a>
+                            <a href="observablelist.html">ObservableList</a>
                         </li>
                         <li>
-                            <a href="http://phosphorjs.github.io/phosphor-queue/api">Queue</a>
+                            <a href="queue.html">Queue</a>
                         </li>
                         <li>
                             <a href="http://phosphorjs.github.io/phosphor-sectionlist/api">SectionList</a>
                         </li>
-                    </ul>
-
-                    <h2>Core</h2>
-                    <ul class="nobull">
                         <li>
-                            <a href="http://phosphorjs.github.io/phosphor-disposable/api">Disposable</a>
+                            <a href="disposable.html">Disposable</a>
                         </li>
                         <li>
-                            <a href="http://phosphorjs.github.io/phosphor-messaging/api">Messaging</a>
+                            <a href="messaging.html">Messaging</a>
                         </li>
                         <li>
-                            <a href="http://phosphorjs.github.io/phosphor-properties/api">Properties</a>
+                            <a href="properties.html">Properties</a>
                         </li>
                         <li>
-                            <a href="http://phosphorjs.github.io/phosphor-signaling/api">Signaling</a>
+                            <a href="signaling.html">Signaling</a>
                         </li>
                     </ul>
 
-                    <h2>Widgets</h2>
+                    <h2>Phosphor UI</h2>
                     <ul class="nobull">
                         <li>
-                            <a href="http://phosphorjs.github.io/phosphor-boxpanel/api">BoxPanel</a>
+                            <a href="boxpanel.html">BoxPanel</a>
                         </li>
                         <li>
-                            <a href="http://phosphorjs.github.io/phosphor-dockpanel/api">DockPanel</a>
+                            <a href="dockpanel.html">DockPanel</a>
                         </li>
                         <li>
                             <a href="http://phosphorjs.github.io/phosphor-gridpanel/api">GridPanel</a>
                         </li>
                         <li>
-                            <a href="http://phosphorjs.github.io/phosphor-menus/api">Menus</a>
+                            <a href="menus.html">Menus</a>
                         </li>
                         <li>
-                            <a href="http://phosphorjs.github.io/phosphor-splitpanel/api">SplitPanel</a>
+                            <a href="splitpanel.html">SplitPanel</a>
                         </li>
                         <li>
-                            <a href="http://phosphorjs.github.io/phosphor-stackedpanel/api">StackedPanel</a>
+                            <a href="stackedpanel.html">StackedPanel</a>
                         </li>
                         <li>
-                            <a href="http://phosphorjs.github.io/phosphor-tabs/api">Tabs</a>
+                            <a href="tabs.html">Tabs</a>
                         </li>
                         <li>
-                            <a href="http://phosphorjs.github.io/phosphor-widget/api">Widget</a>
-                        </li>
-                    </ul>
-                    <h2>Ancillary</h2>
-                    <ul class="nobull">
-                        <li>
-                          <a href="http://phosphorjs.github.io/phosphor-boxengine/api">Boxengine</a>
-                        </li>
-                        <li>
-                          <a href="http://phosphorjs.github.io/phosphor-domutil/api">Domutil</a>
-                        </li>
-                        <li>
-                          <a href="http://phosphorjs.github.io/phosphor-nodewrapper/api">NodeWrapper</a>
-                        </li>
-                        <li>
-                          <a href="http://phosphorjs.github.io/phosphor-plugins/api">Plugins</a>
-                        </li>
-                          <a href="http://phosphorjs.github.io/phosphor-topsort/api">Topsort</a>
+                            <a href="widget.html">Widget</a>
                         </li>
                     </ul>
                 </article>
